--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "assignment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://users.sussex.ac.uk/~sh999/3dapp/labs/lab1",
   "dependencies": {
     "@rollbar/react": "^0.11.2",
     "@testing-library/jest-dom": "^5.17.0",
